--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.com"
+baseURL = "https://joffreymayer.github.io/noob/"
 themesDir = "themes"
 publishDir = "docs"
 languageCode = "en-us"
